--- a/src/index.css
+++ b/src/index.css
@@ -32,7 +32,10 @@ html {
 }
 
 body {
-	display: contents;
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
+
 	margin: 0;
 
 	font-family: 'YS Text', 'Helvetica Neue', Arial, sans-serif;
@@ -49,5 +52,7 @@ body {
 }
 
 #root {
-	display: contents;
+	display: flex;
+	flex-direction: column;
+	flex-grow: 1;
 }
